# H4PPYFarm

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml
client/: start_sploit.py  test_sploit.py
docker-scripts/: build-libmnl.sh  build-libnftnl.sh
hfi/: Cargo.toml
hfi/src/: main.rs
server/: Dockerfile  app.py  config.py  database.py  db.py  flags.py  hfi.py  log.py  main.py  requirements.txt  session.py  timeutils.py  utils.py  worker.py
server/static/css/: auth.css  index.css
server/static/html/: auth.html  index.html
server/static/js/: auth.js  index.js  table.js
